# thoth

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.rst
PROJECT_NAME/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: ErrorUtils.cmake  FindSphinx.cmake  LibUtils.cmake  ModuleUtils.cmake  PropertyUtils.cmake  PythonUtils.cmake  SystemCheck.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: CMakeLists.txt  conf.py  conf.py.in  index.rst
docs/sphinx/Project_Name/: index.rst
docs/sphinx/_static/css/: dark.css  defaults.css  light.css  style.css
docs/sphinx/thoth/: matrix.rst
docs/sphinx/thoth/concepts/: index.rst
docs/sphinx/thoth/ml/: index.rst
docs/sphinx/thoth/ml/genetic/: index.rst
docs/sphinx/thoth/ndarray/: index.rst  ndarray.rst
docs/sphinx/thoth/network/: index.rst
docs/sphinx/thoth/numeric/: bitstring.rst  integral.rst  integral_core.rst
docs/sphinx/thoth/utility/: index.rst  utility.rst
include/: _thoth_config.h
include/thoth/: concepts.h  enum_flag.h  matrix.h  matrix_bool.h  utility.h  utils.h
include/thoth/concepts/thoth/: concepts.h
include/thoth/crypto/: keccak.h  signing.h
include/thoth/crypto/thoth/: hash.h
include/thoth/ml/genetic/: crossover.h  gene.h  gene_base.h  ptr_gene.h  ptr_gene_base.h  random_crossover.h  rna.h  vector_gene.h
include/thoth/ndarray/: ndarray.h
include/thoth/ndarray/thoth/: ndarray.h
include/thoth/network/: network.h  network_unix.h  network_win32.h
include/thoth/network/thoth/: network_unix.h  network_win32.h
include/thoth/numeric/: bitstring.h  fixed_length_bitstring.h  infinite_bitstring.h  integral.h
include/thoth/numeric/thoth/core/: core-integral.h
include/thoth/random/: random.h
tests/: CMakeLists.txt  matrix.cpp  matrix_tests.cpp  ndarray_tests.cpp  utility_tests.cpp  utils.cpp  utils_tests.cpp
tests/include/thoth/tests/numeric/: bitstring_tests.h
tests/thoth/: CMakeLists.txt
tests/thoth/ndarray/: CMakeLists.txt  ndarray_tests.cpp
tests/thoth/numeric/: CMakeLists.txt  numeric_fixed_length_bitstring_tests.cpp
tests/thoth/utility/: CMakeLists.txt  utility_tests.cpp
thoth/: CMakeLists.txt  cpp.hint
thoth/concepts/: CMakeLists.txt
thoth/crypto/: CMakeLists.txt  hash.cpp  keccak.c  keccak.cpp
thoth/ml/: CMakeLists.txt
thoth/ml/genetic/: CMakeLists.txt  core_integral.cpp  crossover.cpp  integral.cpp  ptr_gene_base.cpp
thoth/ndarray/: CMakeLists.txt  ndarray_simd.cpp
thoth/network/: CMakeLists.txt  network.cpp  network_unix.cpp  network_win32.cpp
thoth/numeric/: CMakeLists.txt  bitstring.cpp  fixed_length_bitstring.cpp  infinite_bitstring.cpp  integral.cpp
thoth/random/: CMakeLists.txt
thoth/utility/: CMakeLists.txt
